--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -142,3 +142,9 @@
         background-position: right center;
     }
   }
+  
+  .bottom-privacy-section {
+    a.active {
+        color: #FF5353 !important;
+    }
+  }
